fixed gaps

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    gap: 1px;
+    gap: 2px;
     background-color: #d9dad7;
 }
 
@@ -63,7 +63,7 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
-    gap: 0.5px;
+    gap: 2px;
 }
 
 .btn{
